[gd_scene load_steps=2 format=3 uid="uid://dq6e7iml8jk2n"]

[ext_resource type="Script" path="res://Scenes/QuestionView/AnswerText/AnswerText.gd" id="1_pxv3a"]

[node name="AnswerText" type="Control"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pxv3a")

[node name="InputContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AnswerInput" type="LineEdit" parent="InputContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="InputContainer"]
layout_mode = 2
text = "Submit"

[connection signal="pressed" from="InputContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
